--- a/common_thread/pom.xml
+++ b/common_thread/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>common_thread</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.xiongyingqi</groupId>
+            <artifactId>common_helper</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
