--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- github server corresponds to entry in ~/.m2/settings.xml -->
+        <github.global.server>github</github.global.server>
+
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring.mock.version>2.0.8</spring.mock.version>
         <hibernate.version>4.2.0.Final</hibernate.version>
@@ -329,6 +333,14 @@
                 <extensions>true</extensions>
             </plugin>-->
             <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                    </altDeploymentRepository>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.7</version>
                 <configuration>
@@ -358,6 +370,34 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- 将生成的jar部署到github上 -->
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.9</version>
+                <configuration>
+                    <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+                    <noJekyll>false</noJekyll>                                  <!-- disable webpage processing -->
+                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+                    <!--<outputDirectory>${settings.localRepository}</outputDirectory>-->
+                    <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryName>${project.artifactId}</repositoryName>      <!-- github repo name -->
+                    <repositoryOwner>blademainer</repositoryOwner>    <!-- github username -->
+                </configuration>
+                <executions>
+                    <!-- run site-maven-plugin's 'site' target as part of the build's normal
+                        'deploy' phase -->
+                    <execution>
+                        <goals>
+                            <goal>site</goal>
+                        </goals>
+                        <phase>deploy</phase>
                     </execution>
                 </executions>
             </plugin>
