--- a/pom.xml
+++ b/pom.xml
@@ -383,7 +383,7 @@
                     <noJekyll>false</noJekyll>                                  <!-- disable webpage processing -->
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
                     <!--<outputDirectory>${settings.localRepository}</outputDirectory>-->
-                    <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+                    <branch>refs/heads/gh-pages</branch>                       <!-- remote branch name -->
                     <includes>
                         <include>**/*</include>
                     </includes>
