--- a/common_thread/pom.xml
+++ b/common_thread/pom.xml
@@ -21,6 +21,35 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-scm-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <!--   要将源码放上去，需要加入这个插件    -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
+            <!--<plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
@@ -33,20 +62,26 @@
                 <artifactId>site-maven-plugin</artifactId>
                 <version>0.9</version>
                 <configuration>
-                    <message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
-                    <noJekyll>false</noJekyll>                                  <!-- disable webpage processing -->
-                    <outputDirectory>${project.parent.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
-                    <!--<outputDirectory>${settings.localRepository}</outputDirectory>-->
-                    <branch>refs/heads/gh-pages</branch>                       <!-- remote branch name -->
+                    <message>Maven artifacts for ${project.version}</message>
+                    &lt;!&ndash; git commit message &ndash;&gt;
+                    <noJekyll>false</noJekyll>
+                    &lt;!&ndash; disable webpage processing &ndash;&gt;
+                    <outputDirectory>${project.parent.build.directory}/mvn-repo</outputDirectory>
+                    &lt;!&ndash; matches distribution management repository url above &ndash;&gt;
+                    &lt;!&ndash;<outputDirectory>${settings.localRepository}</outputDirectory>&ndash;&gt;
+                    <branch>refs/heads/gh-pages</branch>
+                    &lt;!&ndash; remote branch name &ndash;&gt;
                     <includes>
                         <include>**/*</include>
                     </includes>
-                    <repositoryName>${project.parent.artifactId}</repositoryName>      <!-- github repo name -->
-                    <repositoryOwner>blademainer</repositoryOwner>    <!-- github username -->
+                    <repositoryName>${project.parent.artifactId}</repositoryName>
+                    &lt;!&ndash; github repo name &ndash;&gt;
+                    <repositoryOwner>blademainer</repositoryOwner>
+                    &lt;!&ndash; github username &ndash;&gt;
                 </configuration>
                 <executions>
-                    <!-- run site-maven-plugin's 'site' target as part of the build's normal
-                        'deploy' phase -->
+                    &lt;!&ndash; run site-maven-plugin's 'site' target as part of the build's normal
+                        'deploy' phase &ndash;&gt;
                     <execution>
                         <goals>
                             <goal>site</goal>
@@ -54,7 +89,7 @@
                         <phase>deploy</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
