--- a/pom.xml
+++ b/pom.xml
@@ -14,38 +14,56 @@
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+    <description>提供最基础的工具类</description>
+    <url>https://github.com/blademainer/common_utils</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Blademainer</name>
+            <email>blademainer@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:ssh://@github.com:blademainer/common_utils.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>
+        <url>git@github.com:blademainer/common_utils.git</url>
+    </scm>
 
     <repositories>
         <repository>
             <id>objectledge</id>
             <url>http://nexus.objectledge.org/nexus/content/repositories/m2thirdparty</url>
         </repository>
-        <repository>
+        <!--<repository>
             <id>kingray</id>
             <url>http://10.188.199.4:8088/nexus/content/repositories/public/</url>
-        </repository>
+        </repository>-->
     </repositories>
 
-    <distributionManagement>
-        <!-- 配置快照版本发布的仓库-->
+
+    <!--<distributionManagement>
+        &lt;!&ndash; 配置快照版本发布的仓库&ndash;&gt;
         <snapshotRepository>
             <id>nexus-snapshots</id>
             <name>Nexus Snapshots Repository</name>
             <url>http://10.188.199.4:8088/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
-        <!-- 配置release版本发布的仓库-->
+        &lt;!&ndash; 配置release版本发布的仓库&ndash;&gt;
         <repository>
             <id>nexus-releases</id>
             <name>Nexus Releases Repository</name>
             <url>http://10.188.199.4:8088/nexus/content/repositories/releases/</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement>-->
 
-    <scm>
-        <url>https://github.com/blademainer/common_utils.git</url>
-        <connection>scm:git:git://github.com/blademainer/common_utils.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>
-    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,10 +82,10 @@
         <mina.version>2.0.7</mina.version>
         <apache.poi.version>3.10-FINAL</apache.poi.version>
 
-
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring.mock.version>2.0.8</spring.mock.version>
         <hibernate.version>4.2.0.Final</hibernate.version>
+        <hibernate.search.version>4.5.1.Final</hibernate.search.version>
         <!--<hibernate.c3p0.version>4.3.5.Final</hibernate.c3p0.version>-->
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
         <mysql.driver.version>5.1.24</mysql.driver.version>
@@ -1350,6 +1368,18 @@
         </dependency>
     </dependencies>
 
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <!--<plugin>
@@ -1358,14 +1388,14 @@
                 <version>2.3.7</version>
                 <extensions>true</extensions>
             </plugin>-->
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
                     <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
                     </altDeploymentRepository>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.7</version>
@@ -1397,34 +1427,126 @@
                             <goal>jar</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
-            <!-- 将生成的jar部署到github上 -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.2</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.2</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <!--测试插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+
+            <!-- 将生成的jar部署到github上 -->
+            <!--<plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
                 <version>0.9</version>
                 <configuration>
                     <message>Maven artifacts for ${project.version}</message>
-                    <!-- git commit message -->
-                    <noJekyll>false</noJekyll>
-                    <!-- disable webpage processing -->
+                    &lt;!&ndash; git commit message &ndash;&gt;
+                    <noJekyll>true</noJekyll>
+                    &lt;!&ndash; disable webpage processing &ndash;&gt;
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-                    <!-- matches distribution management repository url above -->
-                    <!--<outputDirectory>${settings.localRepository}</outputDirectory>-->
-                    <branch>refs/heads/gh-pages</branch>
-                    <!-- remote branch name -->
+                    &lt;!&ndash; matches distribution management repository url above &ndash;&gt;
+                    &lt;!&ndash;<outputDirectory>${settings.localRepository}</outputDirectory>&ndash;&gt;
+                    &lt;!&ndash;gh-pages&ndash;&gt;
+                    &lt;!&ndash;<branch>refs/heads/gh-pages</branch>&ndash;&gt;
+                    &lt;!&ndash; remote branch name &ndash;&gt;
                     <includes>
                         <include>**/*</include>
                     </includes>
                     <repositoryName>${project.artifactId}</repositoryName>
-                    <!-- github repo name -->
+                    &lt;!&ndash; github repo name &ndash;&gt;
                     <repositoryOwner>blademainer</repositoryOwner>
-                    <!-- github username -->
+                    &lt;!&ndash; github username &ndash;&gt;
                 </configuration>
                 <executions>
-                    <!-- run site-maven-plugin's 'site' target as part of the build's normal
-                        'deploy' phase -->
+                    &lt;!&ndash; run site-maven-plugin's 'site' target as part of the build's normal
+                        'deploy' phase &ndash;&gt;
                     <execution>
                         <goals>
                             <goal>site</goal>
@@ -1432,7 +1554,202 @@
                         <phase>deploy</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
+
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <!--<plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.1</version>
+                    <configuration>
+                        <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
+                        </altDeploymentRepository>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-scm-plugin</artifactId>
+                    <version>1.7</version>
+                    <configuration>
+                        <scmVersionType>branch</scmVersionType>
+                        <scmVersion>master</scmVersion>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+                &lt;!&ndash;   要将源码放上去，需要加入这个插件    &ndash;&gt;
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1</version>
+                    <configuration>
+                        <attach>true</attach>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                &lt;!&ndash; 将生成的jar部署到github上 &ndash;&gt;
+                <plugin>
+                    <groupId>com.github.github</groupId>
+                    <artifactId>site-maven-plugin</artifactId>
+                    <version>0.9</version>
+                    <configuration>
+                        <message>Maven artifacts for ${project.version}</message>
+                        &lt;!&ndash; git commit message &ndash;&gt;
+                        <noJekyll>true</noJekyll>
+                        &lt;!&ndash; disable webpage processing &ndash;&gt;
+                        <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                        &lt;!&ndash; matches distribution management repository url above &ndash;&gt;
+                        &lt;!&ndash;<outputDirectory>${settings.localRepository}</outputDirectory>&ndash;&gt;
+                        &lt;!&ndash;gh-pages&ndash;&gt;
+                        <branch>refs/heads/gh-pages</branch>
+                        &lt;!&ndash; remote branch name &ndash;&gt;
+                        <includes>
+                            <include>**/*</include>
+                        </includes>
+                        <repositoryName>${project.artifactId}</repositoryName>
+                        &lt;!&ndash; github repo name &ndash;&gt;
+                        <repositoryOwner>blademainer</repositoryOwner>
+                        &lt;!&ndash; github username &ndash;&gt;
+                    </configuration>
+                    <executions>
+                        &lt;!&ndash; run site-maven-plugin's 'site' target as part of the build's normal
+                            'deploy' phase &ndash;&gt;
+                        <execution>
+                            <goals>
+                                <goal>site</goal>
+                            </goals>
+                            <phase>deploy</phase>
+                        </execution>
+                    </executions>
+                </plugin>-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.9</version>
+                    <configuration>
+                        <forkMode>once</forkMode>
+                        <argLine>-Dfile.encoding=UTF-8</argLine>
+                    </configuration>
+                </plugin>
+                <!--部署到中央maven库-->
+                <plugin>
+                    <artifactId>maven-scm-plugin</artifactId>
+                    <version>1.7</version>
+                    <configuration>
+                        <scmVersionType>branch</scmVersionType>
+                        <scmVersion>master</scmVersion>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+                <!--   要将源码放上去，需要加入这个插件    -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1</version>
+                    <configuration>
+                        <attach>true</attach>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.2</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
+                </plugin>
+                <!--签名插件-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.2</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <useReleaseProfile>false</useReleaseProfile>
+                        <releaseProfiles>release</releaseProfiles>
+                        <goals>deploy</goals>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
