--- a/spring-email/pom.xml
+++ b/spring-email/pom.xml
@@ -250,6 +250,35 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-scm-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <!--   要将源码放上去，需要加入这个插件    -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
+            <!--<plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
@@ -263,25 +292,25 @@
                 <version>0.9</version>
                 <configuration>
                     <message>Maven artifacts for ${project.version}</message>
-                    <!-- git commit message -->
+                    &lt;!&ndash; git commit message &ndash;&gt;
                     <noJekyll>false</noJekyll>
-                    <!-- disable webpage processing -->
+                    &lt;!&ndash; disable webpage processing &ndash;&gt;
                     <outputDirectory>${project.parent.build.directory}/mvn-repo</outputDirectory>
-                    <!-- matches distribution management repository url above -->
-                    <!--<outputDirectory>${settings.localRepository}</outputDirectory>-->
+                    &lt;!&ndash; matches distribution management repository url above &ndash;&gt;
+                    &lt;!&ndash;<outputDirectory>${settings.localRepository}</outputDirectory>&ndash;&gt;
                     <branch>refs/heads/gh-pages</branch>
-                    <!-- remote branch name -->
+                    &lt;!&ndash; remote branch name &ndash;&gt;
                     <includes>
                         <include>**/*</include>
                     </includes>
                     <repositoryName>${project.parent.artifactId}</repositoryName>
-                    <!-- github repo name -->
+                    &lt;!&ndash; github repo name &ndash;&gt;
                     <repositoryOwner>blademainer</repositoryOwner>
-                    <!-- github username -->
+                    &lt;!&ndash; github username &ndash;&gt;
                 </configuration>
                 <executions>
-                    <!-- run site-maven-plugin's 'site' target as part of the build's normal
-                        'deploy' phase -->
+                    &lt;!&ndash; run site-maven-plugin's 'site' target as part of the build's normal
+                        'deploy' phase &ndash;&gt;
                     <execution>
                         <goals>
                             <goal>site</goal>
@@ -289,7 +318,7 @@
                         <phase>deploy</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
