--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiongyingqi</groupId>
     <modules>
@@ -13,7 +12,7 @@
     </modules>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -35,7 +34,8 @@
         <connection>scm:git:ssh://@github.com:blademainer/common_utils.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>
         <url>git@github.com:blademainer/common_utils.git</url>
-    </scm>
+      <tag>common_utils-0.0.1</tag>
+  </scm>
 
     <repositories>
         <repository>
@@ -75,7 +75,7 @@
         <!-- <log4j.version>2.0-beta9</log4j.version> <log4j.sl4j.version>2.0-alpha2</log4j.sl4j.version> -->
         <!--对应hibernate版本为4.3.0.Final以上-->
         <!--<javax.persistence.version>2.1</javax.persistence.version>-->
-        <common_utils.version>0.0.1-SNAPSHOT</common_utils.version>
+        <common_utils.version>0.0.1</common_utils.version>
         <aliyun-openservices.version>1.2.2</aliyun-openservices.version>
         <activemq.version>5.9.0</activemq.version>
         <jsr250.version>1.0</jsr250.version>
