--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiongyingqi</groupId>
     <modules>
@@ -31,11 +32,11 @@
     </developers>
 
     <scm>
-        <connection>scm:git:ssh://@github.com:blademainer/common_utils.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>
+        <connection>scm:git@github.com:blademainer/common_utils.git</connection>
+        <developerConnection>scm:git@github.com:blademainer/common_utils.git</developerConnection>
         <url>git@github.com:blademainer/common_utils.git</url>
-      <tag>common_utils-0.0.1</tag>
-  </scm>
+        <tag>common_utils-0.0.1</tag>
+    </scm>
 
     <repositories>
         <repository>
