--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xiongyingqi</groupId>
     <modules>
@@ -12,7 +13,7 @@
     </modules>
     <artifactId>common_utils</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <description>提供最基础的工具类</description>
     <url>https://github.com/blademainer/common_utils</url>
 
@@ -39,9 +40,8 @@
 
     <scm>
         <connection>scm:git:ssh://@github.com:blademainer/common_utils.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>
+        <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
-        <tag>common_utils-0.0.1</tag>
     </scm>
 
     <repositories>
@@ -1525,6 +1525,9 @@
                     <useReleaseProfile>false</useReleaseProfile>
                     <releaseProfiles>release</releaseProfiles>
                     <goals>deploy</goals>
+                    <checkModificationExcludes>
+                        <checkModificationExclude>*.pom</checkModificationExclude>
+                    </checkModificationExcludes>
                 </configuration>
             </plugin>
 
@@ -1755,6 +1758,9 @@
                         <useReleaseProfile>false</useReleaseProfile>
                         <releaseProfiles>release</releaseProfiles>
                         <goals>deploy</goals>
+                        <checkModificationExcludes>
+                            <checkModificationExclude>*.pom</checkModificationExclude>
+                        </checkModificationExcludes>
                     </configuration>
                 </plugin>
             </plugins>
