--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Wed Sep 03 11:59:28 CST 2014
+#Wed Sep 03 12:09:43 CST 2014
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:git\:ssh\://git@github.com\:blademainer/common_utils.git
+scm.url=scm\:git\:ssh\://@github.com\:blademainer/common_utils.git
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
