[maven-release-plugin] prepare release common_utils-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     </scm>-->
 
     <scm>
-        <connection>scm:git:git@github.com:blademainer/common_utils.git</connection>
+        <connection>scm:git:https://github.com/blademainer/common_utils.git</connection>
         <!--<developerConnection>scm:git:ssh://git@github.com:blademainer/common_utils.git</developerConnection>-->
         <url>https://github.com/blademainer/common_utils</url>
     <tag>common_utils-0.0.1</tag>
