--- a/release.properties
+++ b/release.properties
@@ -1,38 +1,11 @@
 #release configuration
-#Wed Sep 03 12:10:49 CST 2014
-completedPhase=run-preparation-goals
-project.rel.com.xiongyingqi\:baidu_api=0.0.1
-project.scm.com.xiongyingqi\:baidu_api.empty=true
-project.dev.com.xiongyingqi\:common_helper=0.0.2-SNAPSHOT
-project.scm.com.xiongyingqi\:common_utils.connection=scm\:git\:ssh\://@github.com\:blademainer/common_utils.git
-project.rel.com.xiongyingqi\:common_thread=0.0.1
-project.scm.com.xiongyingqi\:common_utils.url=https\://github.com/blademainer/common_utils
-project.scm.com.xiongyingqi\:common_http.empty=true
+#Mon Sep 15 17:17:11 CST 2014
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+scm.url=scm\:git\:git@github.com\:blademainer/common_utils.git
+preparationGoals=clean verify
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
 exec.additionalArguments=-P ossrh
 exec.snapshotReleasePluginAllowed=false
-scm.tag=common_utils-0.0.1
-project.rel.com.xiongyingqi\:common_code=0.0.1
-project.scm.com.xiongyingqi\:common_log.empty=true
-project.rel.com.xiongyingqi\:common_http=0.0.1
-project.dev.com.xiongyingqi\:spring-email=0.0.2-SNAPSHOT
-remoteTagging=true
-scm.url=scm\:git\:ssh\://@github.com\:blademainer/common_utils.git
-project.dev.com.xiongyingqi\:common_log=0.0.2-SNAPSHOT
-project.rel.com.xiongyingqi\:common_helper=0.0.1
-project.dev.com.xiongyingqi\:common_utils=0.0.2-SNAPSHOT
-scm.commentPrefix=[maven-release-plugin] 
-project.rel.com.xiongyingqi\:spring-email=0.0.1
-project.rel.com.xiongyingqi\:common_utils=0.0.1
-project.scm.com.xiongyingqi\:common_thread.empty=true
-project.scm.com.xiongyingqi\:common_helper.empty=true
-project.dev.com.xiongyingqi\:baidu_api=0.0.2-SNAPSHOT
-project.dev.com.xiongyingqi\:common_thread=0.0.2-SNAPSHOT
-project.rel.com.xiongyingqi\:common_log=0.0.1
-pushChanges=true
-project.scm.com.xiongyingqi\:common_code.empty=true
-project.dev.com.xiongyingqi\:common_code=0.0.2-SNAPSHOT
-project.scm.com.xiongyingqi\:common_utils.tag=HEAD
-preparationGoals=clean verify
-project.dev.com.xiongyingqi\:common_http=0.0.2-SNAPSHOT
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-project.scm.com.xiongyingqi\:spring-email.empty=true
+completedPhase=check-poms
