--- a/common_thread/pom.xml
+++ b/common_thread/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>common_utils</artifactId>
         <groupId>com.xiongyingqi</groupId>
-        <version>0.0.5-SNAPSHOT</version>
+        <version>0.0.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_thread</artifactId>
@@ -12,7 +12,6 @@
         <dependency>
             <groupId>com.xiongyingqi</groupId>
             <artifactId>common_helper</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
