新增commons-scan,commons-logic模块

--- a/baidu_api/pom.xml
+++ b/baidu_api/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <artifactId>baidu_api</artifactId>
     <modelVersion>4.0.0</modelVersion>
+    <description>百度接口开发</description>
     <properties>
         <httpclient.version>4.3.1</httpclient.version>
     </properties>
