--- a/common_log/pom.xml
+++ b/common_log/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_log</artifactId>
+    <description>通用日志帮助</description>
     <properties>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
