--- a/common_code/pom.xml
+++ b/common_code/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_code</artifactId>
+    <description>通用代码处理</description>
     <dependencies>
         <dependency>
             <groupId>com.xiongyingqi</groupId>
