--- a/common_thread/pom.xml
+++ b/common_thread/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_thread</artifactId>
-
+    <description>线程辅助</description>
     <dependencies>
         <dependency>
             <groupId>com.xiongyingqi</groupId>
