--- a/commons-file/pom.xml
+++ b/commons-file/pom.xml
@@ -4,6 +4,7 @@
     <version>0.0.10-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>commons-file</artifactId>
+    <description>文件辅助</description>
     <parent>
         <artifactId>common_utils</artifactId>
         <groupId>com.xiongyingqi</groupId>
