--- a/commons-logic/pom.xml
+++ b/commons-logic/pom.xml
@@ -8,18 +8,9 @@
         <version>0.0.10-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>commons-scan</artifactId>
-    <description>提供对包、类、方法的扫描</description>
+    <description>逻辑运算辅助</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.xiongyingqi</groupId>
-            <artifactId>common_helper</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-    </dependencies>
+    <artifactId>commons-logic</artifactId>
+
 
 </project>
