--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -8,8 +8,25 @@
         <version>0.0.10-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>commons-spring</artifactId>
+    <description>spring工具</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.xiongyingqi</groupId>
+            <artifactId>common_helper</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
