--- a/spring-email/pom.xml
+++ b/spring-email/pom.xml
@@ -7,6 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>spring-email</artifactId>
+    <description>使用spring配置代理收发邮件</description>
 
     <dependencies>
         <dependency>
