--- a/common_code/pom.xml
+++ b/common_code/pom.xml
@@ -13,6 +13,10 @@
             <groupId>com.xiongyingqi</groupId>
             <artifactId>common_helper</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
