--- a/commons-spring/pom.xml
+++ b/commons-spring/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spring-context</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
