--- a/spring-email/pom.xml
+++ b/spring-email/pom.xml
@@ -243,6 +243,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
