[maven-release-plugin] prepare release common_utils-0.1.4

--- a/common_thread/pom.xml
+++ b/common_thread/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>common_utils</artifactId>
         <groupId>com.xiongyingqi</groupId>
-        <version>0.1.4-SNAPSHOT</version>
+        <version>0.1.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common_thread</artifactId>
