完善对jackson1的支持，核心类使用Jackson1JavassistFilterPropertyHandler

--- a/pom.xml
+++ b/pom.xml
@@ -1434,7 +1434,7 @@
         </profiles>
     </settings>
     -->
-    <!--gpg2 336D116F-->
+    <!-- gpg2 \-\-keyserver hkp://pool.sks-keyservers.net \-\-recv-keys 336D116F-->
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
