[maven-release-plugin] rollback the release of common_utils-0.1.8

--- a/pom.xml
+++ b/pom.xml
@@ -1869,6 +1869,10 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <outputEncoding>UTF-8</outputEncoding>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
