[maven-release-plugin] rollback the release of common_utils-0.1.8

--- a/pom.xml
+++ b/pom.xml
@@ -1828,8 +1828,10 @@
                         </execution>
                     </executions>
                     <configuration>
+                        <aggregate>true</aggregate>
                         <encoding>UTF-8</encoding>
                         <outputEncoding>UTF-8</outputEncoding>
+                        <charset>UTF-8</charset>
                     </configuration>
                 </plugin>
             </plugins>
